Header and footer almost finished! Sesión 02 BEDU :)

--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Macha</title>
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a style="display: flex" href=""><img src="img/matcha.png" alt=""></a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Templates</a></li>
+                <li><a href="">Pricing</a></li>
+                <li><a href="">Customers</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Resources</a></li>
+                <li><a href="">Sign in</a></li>
+                <li><button><strong>Get started free</strong></button></li>
+            </ul>
+        </nav>
+    </header>
 
+
+    <main>
+
+    </main>
+
+
+    <footer>
+        <div class="footer-container">
+            <form>
+                <h5 class="footer-title">SUBSCRIBE</h1>
+                <p>
+                    Get the latest tips and trends for ecommerce marketing with <br>
+                    the weekly Morning Matcha.
+                </p>
+                <div>
+                    <input type="email" placeholder="franciscomr@bedu.com">
+                    <button>Subscribe &rarr;</button>
+                </div>
+            </form>
+    
+            <div class="options">
+                <ul>
+                    <li class="footer-title">PRODUCTS</li>
+                    <li>Blog Creator</li>
+                    <li>Content Library</li>
+                </ul>
+
+                <ul>
+                    <li class="footer-title">MATCHA</li>
+                    <li>About</li>
+                    <li>Story</li>
+                    <li>Team</li>
+                    <li>Careers</li>
+                </ul>
+
+                <ul>
+                    <li class="footer-title">RESOURCES</li>
+                    <li>Privacy</li>
+                    <li>Terms</li>
+                    <li>Support</li>
+                    <li>Contact</li>
+                    <li>Referral Program</li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
